<resources>
    <string name="app_name">21.21.1502</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Sign Up</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="prefix_phone">+62</string>
</resources>